--- a/src/components/Companeis.astro
+++ b/src/components/Companeis.astro
@@ -48,8 +48,8 @@ const companies = [
     metric: "19M+ Reach"
   },
   {
-    name: "MetaKosmos",
-    logo: "/images_companies/metakosmos.com.au.png",
+    name: "Spark",
+    logo: "/images_companies/spark.png",
     metric: "17M+ Reach"
   },
   {
@@ -128,9 +128,9 @@ const companies = [
             <h3 class="text-xs sm:text-sm lg:text-base font-medium text-gray-900 text-center">
               {company.name}
             </h3>
-            <p class="text-xs lg:text-sm text-gray-500 text-center mt-1">
+            {/* <p class="text-xs lg:text-sm text-gray-500 text-center mt-1">
               {company.metric}
-            </p>
+            </p> */}
           </div>
         </div>
       ))}
