--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -58,7 +58,7 @@ import Container from "./Container.astro";
                                 </a>
                             </li>
                             <li>
-                                <a href="#footer" class="block md:px-4 transition hover:text-primary text-gray-800 lg:text-white">
+                                <a href="#faq" class="block md:px-4 transition hover:text-primary text-gray-800 lg:text-white">
                                     <span>FAQ</span>
                                 </a>
                             </li>
@@ -67,7 +67,8 @@ import Container from "./Container.astro";
 
                     <div class="mt-8 lg:mt-0">
                         <a
-                            href="https://calendly.com/ayushdungriyal2/intro-call"
+                            href="https://calendly.com/ecred/guaranteed-media-strategy-call"
+                            target="_blank"
                             class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary 
                                    before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                             >
