--- a/src/components/CaseStudy.astro
+++ b/src/components/CaseStudy.astro
@@ -2,7 +2,7 @@
 import Container from "./Container.astro";
 ---
 
-<div id="case-studies" class="">
+<div id="templates" class="">
   <Container>
     <div class="space-y-24">
       <div class="max-w-3xl mx-auto text-center mb-12">
