--- a/src/components/Companeis.astro
+++ b/src/components/Companeis.astro
@@ -53,7 +53,7 @@ const companies = [
     metric: "17M+ Reach"
   },
   {
-    name: "ModOLabs",
+    name: "Modo",
     logo: "/images_companies/modo.svg",
     metric: "21M+ Reach"
   },
