--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -2,7 +2,7 @@
 import Container from "./Container.astro";
 ---
 
-<div class="">
+<div class="" id="features">
   <Container>
     <!-- Centepurple Header Section -->
     <div class="text-center max-w-3xl mx-auto mb-20">
