--- a/src/components/Vs2.astro
+++ b/src/components/Vs2.astro
@@ -68,7 +68,7 @@ const comparisons = [
 ];
 ---
 
-<div class=" bg-gradient-to-b from-white to-gray-50">
+<div id ="solution" class=" bg-gradient-to-b from-white to-gray-50">
   <Container>
     <!-- Header -->
     <div class="max-w-3xl mx-auto text-center mb-20">
