--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -36,14 +36,17 @@
                   <h3 class="text-lg sm:text-xl font-semibold text-gray-800 mb-3 sm:mb-4">Contact</h3>
                   <ul class="space-y-2 sm:space-y-3">
                       <li>
-                          <a href="mailto:sales@establishcred.com" class="text-gray-500 hover:text-primary">sim@establishcred.com</a>
+                          <a href="mailto:sales@establishcred.com" class="text-gray-500 hover:text-primary">sales@establishcred.com</a>
                       </li>
                   </ul>
               </div>
               
               <div>
                   <h3 class="text-lg sm:text-xl font-semibold text-gray-800 mb-3 sm:mb-4">Schedule a Call</h3>
-                  <a href="#" class="inline-flex items-center text-gray-500 hover:text-primary">
+                  <a
+                  
+                  href="https://calendly.com/ecred/guaranteed-media-strategy-call"
+                  target="_blank" class="inline-flex items-center text-gray-500 hover:text-primary">
                       <span>Book a consultation</span>
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
