--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -89,7 +89,7 @@ const faqs = [
 ];
 ---
 
-<div class="">
+<div id="faq" class="">
   <Container>
     <div class="flex items-center gap-3 mb-12">
       <h2 class="text-2xl font-bold text-gray-700 md:text-4xl">
