--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -11,7 +11,7 @@
               
               <div class="grid sm:grid-cols-2 gap-4 sm:gap-6">
                   <div class="space-y-4">
-                      <a href="#" class="flex items-center space-x-3 transition hover:text-primary">
+                      <a href="#" class="flex items-center space-x-3 transition ">
                           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24" viewBox="0 0 30 30" style="fill:#8974FF;">
                               <path d="M24,4H6C4.895,4,4,4.895,4,6v18c0,1.105,0.895,2,2,2h18c1.105,0,2-0.895,2-2V6C26,4.895,25.105,4,24,4z M10.954,22h-2.95 v-9.492h2.95V22z M9.449,11.151c-0.951,0-1.72-0.771-1.72-1.72c0-0.949,0.77-1.719,1.72-1.719c0.948,0,1.719,0.771,1.719,1.719 C11.168,10.38,10.397,11.151,9.449,11.151z M22.004,22h-2.948v-4.616c0-1.101-0.02-2.517-1.533-2.517 c-1.535,0-1.771,1.199-1.771,2.437V22h-2.948v-9.492h2.83v1.297h0.04c0.394-0.746,1.356-1.533,2.791-1.533 c2.987,0,3.539,1.966,3.539,4.522V22z"></path>
                           </svg>
@@ -36,7 +36,7 @@
                   <h3 class="text-lg sm:text-xl font-semibold text-gray-800 mb-3 sm:mb-4">Contact</h3>
                   <ul class="space-y-2 sm:space-y-3">
                       <li>
-                          <a href="mailto:sales@establishcred.com" class="text-gray-500 hover:text-primary">sales@establishcred.com</a>
+                          <a href="mailto:sales@establishcred.com" class="text-gray-500 ">sales@establishcred.com</a>
                       </li>
                   </ul>
               </div>
@@ -46,7 +46,7 @@
                   <a
                   
                   href="https://calendly.com/ecred/guaranteed-media-strategy-call"
-                  target="_blank" class="inline-flex items-center text-gray-500 hover:text-primary">
+                  target="_blank" class="inline-flex items-center text-gray-500 ">
                       <span>Book a consultation</span>
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
@@ -63,9 +63,9 @@
                   © 2024 All Rights Reserved.
               </div>
               <div class="flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-6 text-sm text-center sm:text-left">
-                  <a href="#" class="text-gray-500 hover:text-primary">Privacy Policy</a>
-                  <a href="#" class="text-gray-500 hover:text-primary">Terms of Service</a>
-                  <a href="#" class="text-gray-500 hover:text-primary">Cookie Policy</a>
+                  <a href="#" class="text-gray-500 ">Privacy Policy</a>
+                  <a href="#" class="text-gray-500 ">Terms of Service</a>
+                  <a href="#" class="text-gray-500 ">Cookie Policy</a>
               </div>
           </div>
       </div>
