--- a/src/components/CaseStudy.astro
+++ b/src/components/CaseStudy.astro
@@ -6,7 +6,8 @@ import Container from "./Container.astro";
   <Container>
     <div class="space-y-24">
       <div class="max-w-3xl mx-auto text-center mb-12">
-        <h2 class="text-3xl font-bold text-gray-700 darkcanceltext-white mb-3">
+  
+        <h2 class="text-4xl font-bold text-gray-800 mb-4">
           Case Studies
         </h2>
         <p class="text-gray-600 darkcanceltext-gray-300">
@@ -150,7 +151,7 @@ import Container from "./Container.astro";
             <div class="inline-block px-4 py-2 bg-purple-50 darkcancelbg-purple-900/10 rounded-full">
               <span class="text-sm font-medium text-secondary">B2C Augmented Reality</span>
             </div>
-            <h3 class="text-2xl font-bold text-gray-700 darkcanceltext-white">Seed Success Story</h3>
+            <h3 class="text-2xl font-bold text-gray-700 darkcanceltext-white">Series A Story</h3>
             <p class="text-gray-600 darkcanceltext-gray-300">We partnered with CeekVR.com to secure prominent features on Forbes and Bloomberg within a 90 day span, amplifying their authority and reach in the tech and VR space.<br><br>These high-profile placements drove a 60% uplift in total media reach, significantly expanding their audience exposure. The increased authority traffic directly translated to a 35% boost in product sales, solidifying CeekVR.com's position as a leading innovator in virtual reality solutions.</p>
           </div>
         </div>
