--- a/src/components/Companeis.astro
+++ b/src/components/Companeis.astro
@@ -23,8 +23,8 @@ const companies = [
     metric: "12M+ Reach"
   },
   {
-    name: "Cledara",
-    logo: "/images_companies/cledara.com.jpeg",
+    name: "Retail Me Not",
+    logo: "/images_companies/retailmenot.png",
     metric: "16M+ Reach"
   },
   {
@@ -48,8 +48,8 @@ const companies = [
     metric: "19M+ Reach"
   },
   {
-    name: "Spark",
-    logo: "/images_companies/spark.png",
+    name: "Metakosmos",
+    logo: "/images_companies/metakosmos.com.au.png",
     metric: "17M+ Reach"
   },
   {
@@ -90,7 +90,8 @@ const companies = [
 ];
 ---
 
-<div id="companies" class="py-8 sm:py-12 lg:py-16">
+<!-- <div id="companies" class="py-8 sm:py-12 lg:py-16"> -->
+<div id="companies" class="">
   <Container>
     <div class="max-w-3xl mx-auto text-center mb-8 sm:mb-12">
       <h2 class="text-3xl font-bold text-gray-700 darkcanceltext-white mb-2 sm:mb-3">
