--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -68,7 +68,27 @@ import Container from "./Container.astro";
         {/* Social Proof Section */}
 <div class="flex flex-col sm:flex-row justify-center items-center gap-4 sm:gap-6 md:gap-8 px-4 sm:px-0">
     <div class="flex items-center gap-3">
-      <span class="text-white/50 text-sm">Featured In: Forbes, INC, Entrepreneur ..</span>
+
+      <div class="flex flex-col sm:flex-row items-center gap-3 sm:gap-5">
+        <span class="text-white/50 text-sm font-medium">Featured In:</span>
+        <div class="flex flex-wrap justify-center sm:flex-nowrap gap-2">
+          <div class="bg-white rounded-md shadow-xl cursor-pointer">
+            <img src="/show_logo/entrepreneur.webp" alt="Entrepreneur" class="h-7 sm:h-10 w-7 sm:w-10 object-contain p-1.5 sm:p-2.5" />
+          </div>
+          <div class="bg-white rounded-md shadow-xl cursor-pointer">
+            <img src="/show_logo/forbes.png" alt="Forbes" class="h-7 sm:h-10 w-7 sm:w-10 object-contain" />
+          </div>
+          <div class="bg-white rounded-md shadow-xl cursor-pointer">
+            <img src="/show_logo/hubspot.svg" alt="HubSpot" class="h-7 sm:h-10 w-7 sm:w-10 object-contain p-1.5 sm:p-2.5" />
+          </div>
+          <div class="bg-white rounded-md shadow-xl cursor-pointer">
+            <img src="/show_logo/inc.png" alt="Inc" class="h-7 sm:h-10 w-7 sm:w-10 object-contain p-1.5 sm:p-2.5" />
+          </div>
+          <div class="bg-white rounded-md shadow-xl cursor-pointer">
+            <img src="/show_logo/nascar.png" alt="Nascar" class="h-7 sm:h-10 w-7 sm:w-10 object-contain p-1.5 sm:p-2.5" />
+          </div>
+        </div>
+       </div>
 
       <span class="text-white/70 text-sm font-medium"></span>
     </div>
