--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -61,7 +61,7 @@ const testimonials = [
 ];
 ---
 
-<div class="relative " id="testimonials">
+<div class="relative -mt-10 " id="testimonials">
   <!-- Background Elements -->
   <div class="absolute inset-0 bg-gradient-to-br"></div>
   <div class="absolute left-0 top-1/4 w-1/3 h-1/3 bg-red-100/20 rounded-full mix-blend-multiply blur-3xl"></div>
