--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -20,7 +20,7 @@ import Container from "./Container.astro";
       <!-- Left: Icons & Categories -->
       <div class="relative">
         <!-- Background Decoration -->
-        <div class="absolute inset-0 bg-gradient-to-br from-purple-50/80 to-violet-50/50 darkcancelfrom-purple-900/10 darkcancelto-violet-900/5 border border-purple-200  rounded-3xl"></div>
+        <div class="absolute inset-0 bg-gradient-to-br from-purple-200 to-violet-200 darkcancelfrom-purple-900/10 darkcancelto-violet-900/5 border border-purple-200  rounded-3xl"></div>
         
         <!-- Content Container -->
         <div class="relative p-8 ">
