--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,38 +17,17 @@ import TopBanner from "../components/TopBanner.astro";
 
 		<link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap" rel="stylesheet" />
 		
-		<!-- Tracking Script -->
-		<script is:inline>
-			// @ts-nocheck
-			(function() {
-				var reb2b = window.reb2b = window.reb2b || [];
-				if (reb2b.invoked) return;
-				reb2b.invoked = true;
-				reb2b.methods = ["identify", "collect"];
-				reb2b.factory = function(method) {
-					return function() {
-						var args = Array.prototype.slice.call(arguments);
-						args.unshift(method);
-						reb2b.push(args);
-						return reb2b;
-					};
-				};
-				for (var i = 0; i < reb2b.methods.length; i++) {
-					var key = reb2b.methods[i];
-					reb2b[key] = reb2b.factory(key);
-				}
-				reb2b.load = function(key) {
-					var script = document.createElement("script");
-					script.type = "text/javascript";
-					script.async = true;
-					script.src = "https://s3-us-west-2.amazonaws.com/b2bjsstore/b/" + key + "/VN080H4YKZ6J.js.gz";
-					var first = document.getElementsByTagName("script")[0];
-					first.parentNode.insertBefore(script, first);
-				};
-				reb2b.SNIPPET_VERSION = "1.0.1";
-				reb2b.load("VN080H4YKZ6J");
-			})();
-		</script>
+		<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-KNYBQJ45EV"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KNYBQJ45EV');
+</script>
+
+
 	</head>
 	<body class="bg-primary">
 		<!-- <TopBanner/> -->
