--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,13 @@ import TopBanner from "../components/TopBanner.astro";
   gtag('config', 'G-KNYBQJ45EV');
 </script>
 
-
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "paz3cwelk6");
+</script>
 	</head>
 	<body class="bg-primary">
 		<!-- <TopBanner/> -->
