--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -85,7 +85,7 @@ import Container from "./Container.astro";
             <img src="/show_logo/inc.png" alt="Inc" class="h-7 sm:h-10 w-7 sm:w-10 object-contain p-1.5 sm:p-2.5" />
           </div>
           <div class="bg-white rounded-md shadow-xl cursor-pointer">
-            <img src="/show_logo/nascar.png" alt="Nascar" class="h-7 sm:h-10 w-7 sm:w-10 object-contain p-1.5 sm:p-2.5" />
+            <img src="/show_logo/nasdaq.webp" alt="Nascar" class="h-7 sm:h-10 w-7 sm:w-10 object-contain p-1.5 sm:p-2.5" />
           </div>
         </div>
        </div>
