--- a/src/components/AppFooter.astro
+++ b/src/components/AppFooter.astro
@@ -47,7 +47,7 @@
                   <h3 class="text-lg sm:text-xl font-semibold text-gray-800 mb-3 sm:mb-4">Schedule a Call</h3>
                   <a
                   
-                  href="https://calendly.com/ecred/guaranteed-media-strategy-call"
+                  href="https://meetings.hubspot.com/sim-aulakh"
                   target="_blank" class="inline-flex items-center text-gray-500 ">
                       <span>Book a consultation</span>
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -62,7 +62,7 @@
       <div class="mt-8 sm:mt-12 md:mt-16 pt-6 sm:pt-8 border-t border-gray-200">
           <div class="flex flex-col sm:flex-row justify-between items-center space-y-4 sm:space-y-0">
               <div class="text-gray-500 text-sm">
-                  © 2024 All Rights Reserved.
+                  © 2025 All Rights Reserved.
               </div>
               <div class="flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-6 text-sm text-center sm:text-left">
                   <a href="#" class="text-gray-500 ">Privacy Policy</a>
