--- a/src/components/AppHeader.astro
+++ b/src/components/AppHeader.astro
@@ -67,7 +67,7 @@ import Container from "./Container.astro";
 
                     <div class="mt-8 lg:mt-0">
                         <a
-                            href="https://calendly.com/ecred/guaranteed-media-strategy-call"
+                            href="https://meetings.hubspot.com/sim-aulakh"
                             target="_blank"
                             class="relative flex h-9 w-full items-center justify-center px-4 before:absolute before:inset-0 before:rounded-full before:bg-primary 
                                    before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
