--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -56,7 +56,7 @@ import Container from "./Container.astro";
 
           {/* CTA Button */}
           <div class="flex justify-center mb-8 sm:mb-10 md:mb-12 lg:mb-16">
-            <a href="https://calendly.com/ecred/guaranteed-media-strategy-call"
+            <a href="https://meetings.hubspot.com/sim-aulakh"
             target="_blank"
               class="w-full sm:w-auto bg-white/[0.05] hover:bg-white/[0.08] border border-white/[0.08] transition-all px-4 sm:px-6 md:px-8 py-2 sm:py-2.5 md:py-3 rounded-lg font-medium text-sm md:text-base text-white mx-4 sm:mx-0"
             >
