--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,13 +20,15 @@ import Features3 from "../components/Features3.astro";
 import Features4 from "../components/Features4.astro";
 // import Features5 from '../components/Features5.astro';
 import Companeis from "../components/Companeis.astro";
+import Roi from "../components/Roi.astro";
 ---
 
 <Layout title="Auto B2B">
   <HeroSection />
   <div class="mt-24">
-  <main class="space-y-28 mb-40">
-    <Intro />
+    <main class="space-y-28 mb-40">
+      <Intro />
+    <Roi/>
     <!-- <Features1 /> -->
     <!-- <Features2 /> -->
     <!-- <Features3 /> -->
