--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -120,7 +120,7 @@ import Container from "./Container.astro";
                 <polyline points="20 6 9 17 4 12"></polyline>
               </svg>
             </div>
-            <span class="text-gray-600 darkcanceltext-gray-300">Tailopurple PR strategies aligned with your growth stage</span>
+            <span class="text-gray-600 darkcanceltext-gray-300">Tailored PR strategies aligned with your growth stage</span>
           </div>
           <div class="flex items-start gap-3">
             <div class="w-6 h-6 flex items-center justify-center rounded-full bg-purple-100 darkcancelbg-purple-900/20 mt-1">
